Fix thread-safety and memory management for parallel test execution (#2270)
* Initial plan

* Fix thread-safety issues: use ThreadLocal, ConcurrentHashMap, AtomicInteger, and synchronized collections

Co-authored-by: MohabMohie <19201898+MohabMohie@users.noreply.github.com>

* Address code review: AtomicInteger for counters, synchronizedList for collections, optimize addNewIssue

Co-authored-by: MohabMohie <19201898+MohabMohie@users.noreply.github.com>

* Restore original string formatting rules and issue link comment in formatElementLocatorToImagePath

Co-authored-by: MohabMohie <19201898+MohabMohie@users.noreply.github.com>

---------

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>
Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: MohabMohie <19201898+MohabMohie@users.noreply.github.com>
Co-authored-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>